<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".animation.AnimationMainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/animation_drawable"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:contentDescription="@string/animation_drawable"
            android:layout_gravity="center_horizontal"
            android:id="@+id/animationDrawable"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <Button
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/animation_dialog"
            android:textColor="#FFF"
            android:background="@drawable/btn_background"
            android:id="@+id/dialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/circularAnimationBtn"
            android:layout_marginTop="20dp"
            android:textColor="#FFF"
            android:background="@drawable/btn_background"
            android:text="@string/circular_animation"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/spring_animation"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/springAnimationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"/>
        <Button
            android:text="@string/scene_change"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/sceneChangeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"/>
        <Button
            android:text="@string/activity_transition"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/activityTransitionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>